<resources>
    <string name="app_name">My FirstApp</string>
    <string name="name">用户名:</string>
    <string name="pass">密码：</string>
    <string name="remberpass">记住密码</string>
    <string name="regiest">点此注册</string>
    <string name="submit">登陆</string>
    <string name="pass2">确认密码：</string>
    <string name="regiest2">注册</string>
    <string name="start">开始游戏</string>
    <string name="about">个人中心</string>
</resources>
